--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -31,6 +31,69 @@
     height: 100vh;
 }
 
+/* Friends modal */
 #friendsModal .form-control {
-    line-height: 2.2;
+    line-height: 2;
 }
+
+#friendsModal .btn-success {
+    background-color: var(--c-success);
+    border: none;
+}
+
+#friendsModal .btn-danger {
+    background-color: var(--c-danger);
+    border: none;
+}
+
+#friendsModal .btn-primary {
+    background-color: var(--c-primary-accent);
+    border: none;
+}
+
+#friendsModal .btn-secondary {
+    border: none;
+}
+
+/* Buttons */
+.friend-request-default-btn {
+    background-color: transparent;
+    border: none;
+    font-size: 1.2rem;
+    margin: 0 5px 0 5px;
+}
+
+.friend-request-accept-btn {
+    color: var(--c-success);
+}
+
+.friend-request-reject-btn {
+    color: var(--c-danger);
+}
+
+.modal-btn {
+    background-color: #2c2f33;
+    color: #ffffff;
+    border: 1px solid #40444b;
+    border-radius: 5px;
+    padding: 10px 15px;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: left;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.modal-btn:hover {
+    background-color: #40444b;
+    border-color: var(--c-lightblue);
+    color: var(--c-lightblue);
+}
+
+.modal-btn.active {
+    background-color: var(--c-lightblue);
+    border-color: var(--c-lightblue);
+    color: #ffffff;
+}
+/* Buttons end */
+/* Friends modal end */
