--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,7 +21,7 @@
             <div class="mt-4 navbar-top">
                 <div class="navbar-top-content">
                     <div class="d-flex align-items-center">
-                        <img th:src="@{/image/user_icon.png}" src="../static/image/user_icon.png" alt="" class="navbar-user-icon">
+                        <img th:src="@{/image/user_icon.png}" src="../static/image/user_icon.png" alt="" class="user-icon">
                         <p th:text="${dName}"></p>
                     </div>
                 </div>
@@ -79,10 +79,9 @@
         <div layout:fragment="content"></div>
 
         <!--        Modals          -->
-        <!-- Will be redesigned -->
         <div class="modal fade" tabindex="-1" id="friendsModal">
             <div class="modal-dialog modal-lg">
-                <div class="modal-content" style="background-color: var(--c-background-primary); color: white; border-radius: 10px;">
+                <div class="modal-content" style="background-color: var(--c-background-primary); color: white;">
                     <div class="modal-header border-0">
                         <h5 class="modal-title">Add a Friend</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -93,7 +92,14 @@
                                 <div class="d-flex mb-3">
                                     <span>Incoming friend requests</span>
                                 </div>
-                                <ul class="list-group bg-dark" id="friendRequestList">
+                                <ul class="list-group" id="friendRequestList">
+<!--                                    <li class="list-group-item bg-secondary d-flex justify-content-between align-items-center text-white border-0">-->
+<!--                                        <span>asdasd</span>-->
+<!--                                        <div>-->
+<!--                                            <button class="friend-request-default-btn friend-request-accept-btn"><i class="fa-solid fa-check"></i></button>-->
+<!--                                            <button class="friend-request-default-btn friend-request-reject-btn"><i class="fa-solid fa-xmark"></i></button>-->
+<!--                                        </div>-->
+<!--                                    </li>-->
                                 </ul>
                             </div>
 
@@ -101,11 +107,10 @@
                                 <form method="post">
                                     <div class="mb-3">
                                         <label for="friendName" class="form-label mb-3">Friend's Name</label>
-                                        <input type="text" class="form-control bg-dark text-white border-0" id="friendName" name="name" placeholder="John#152" required>
+                                        <input type="text" class="form-control text-black border-0" id="friendName" name="name" placeholder="John#152" required>
                                     </div>
                                     <div class="modal-footer border-0 p-0">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary">Add Friend</button>
+                                        <button type="submit" class="modal-btn">Add Friend</button>
                                     </div>
                                 </form>
                             </div>
@@ -123,23 +128,18 @@
                         <div class="col-md-3 p-3">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <button class="profile-nav-link w-100" data-section="profile-info">
-                                        Profile Info
+                                    <button class="settings-nav-link modal-btn w-100" data-section="profile-section">
+                                        Profile
                                     </button>
                                 </li>
                                 <li class="nav-item">
-                                    <button class="profile-nav-link w-100" data-section="privacy-settings">
-                                        Privacy Settings
+                                    <button class="settings-nav-link modal-btn w-100" data-section="security-section">
+                                        Security
                                     </button>
                                 </li>
                                 <li class="nav-item">
-                                    <button class="profile-nav-link w-100" data-section="notifications">
+                                    <button class="settings-nav-link modal-btn w-100" data-section="notification-section">
                                         Notifications
-                                    </button>
-                                </li>
-                                <li class="nav-item">
-                                    <button class="profile-nav-link w-100" data-section="change-password">
-                                        Change Password
                                     </button>
                                 </li>
                             </ul>
@@ -147,18 +147,25 @@
 
                         <!-- Right Side: Dynamic Content -->
                         <div class="col-md-9 p-3">
-                            <div id="profile-info" class="profile-content-section">
+                            <div id="profile-section" class="settings-content-section">
                                 <h5>Profile Information</h5>
                                 <p>Edit your profile details here.</p>
                                 <form>
                                     <div class="mb-3">
-                                        <label for="username" class="form-label">Display name</label>
-                                        <input type="text" class="form-control" id="username" value="JohnDoe">
+                                        <form>
+                                            <div class="mb-2">
+                                                <label for="displayName" class="form-label">
+                                                    Change username (<span style="font-style: italic">every two weeks</span>)
+                                                </label>
+                                                <input type="text" class="form-control" id="displayName" name="displayName">
+                                            </div>
+                                            <button type="submit" class="modal-btn">Save</button>
+                                        </form>
                                     </div>
                                 </form>
                             </div>
 
-                            <div id="privacy-settings" class="profile-content-section d-none">
+                            <div id="security-section" class="settings-content-section d-none">
                                 <h5>Privacy Settings</h5>
                                 <p>Manage your privacy preferences.</p>
                                 <div class="form-check form-switch">
@@ -171,7 +178,7 @@
                                 </div>
                             </div>
 
-                            <div id="notifications" class="profile-content-section d-none">
+                            <div id="notification-section" class="settings-content-section d-none">
                                 <h5>Notification Settings</h5>
                                 <p>Customize your notification preferences.</p>
                                 <div class="form-check form-switch">
@@ -184,24 +191,24 @@
                                 </div>
                             </div>
 
-                            <div id="change-password" class="profile-content-section d-none">
-                                <h5>Change Password</h5>
-                                <p>Update your password securely.</p>
-                                <form>
-                                    <div class="mb-3">
-                                        <label for="currentPassword" class="form-label">Current Password</label>
-                                        <input type="password" class="form-control" id="currentPassword">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="newPassword" class="form-label">New Password</label>
-                                        <input type="password" class="form-control" id="newPassword">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="confirmPassword" class="form-label">Confirm New Password</label>
-                                        <input type="password" class="form-control" id="confirmPassword">
-                                    </div>
-                                </form>
-                            </div>
+<!--                            <div id="change-password" class="profile-content-section d-none">-->
+<!--                                <h5>Change Password</h5>-->
+<!--                                <p>Update your password securely.</p>-->
+<!--                                <form>-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label for="currentPassword" class="form-label">Current Password</label>-->
+<!--                                        <input type="password" class="form-control" id="currentPassword">-->
+<!--                                    </div>-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label for="newPassword" class="form-label">New Password</label>-->
+<!--                                        <input type="password" class="form-control" id="newPassword">-->
+<!--                                    </div>-->
+<!--                                    <div class="mb-3">-->
+<!--                                        <label for="confirmPassword" class="form-label">Confirm New Password</label>-->
+<!--                                        <input type="password" class="form-control" id="confirmPassword">-->
+<!--                                    </div>-->
+<!--                                </form>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -211,7 +218,7 @@
 
     <script th:src="@{/js/friendSystem.js}" src="../static/js/friendSystem.js"></script>
     <script th:src="@{/js/main.js}" src="../static/js/main.js"></script>
-    <script th:src="@{/js/profile.js}" src="../static/js/profile.js"></script>
+    <script th:src="@{/js/settings.js}" src="../static/js/settings.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
